@@ -3,7 +3,7 @@ IPv4 Loopback test
 --SKIPIF--
 <?php
 	if (!extension_loaded('sockets')) {
-		die('skip sockets extenion not available.');
+		die('skip sockets extension not available.');
 	}
 ?>
 --FILE--
